feat: improvement so it starts producing digits

--- a/text_to_mnist_diffusion.ipynb
+++ b/text_to_mnist_diffusion.ipynb
@@ -160,7 +160,13 @@
         "    def __init__(self, cfg: DiffusionConfig, text_vocab: int):\n",
         "        super().__init__()\n",
         "        ch = cfg.base_channels\n",
-        "        self.text_encoder = TextEncoder(text_vocab, emb_dim=cfg.text_dim, hidden_dim=cfg.text_dim, num_layers=cfg.num_layers_text, dropout=cfg.dropout)\n",
+        "        self.text_encoder = TextEncoder(\n",
+        "            text_vocab,\n",
+        "            emb_dim=cfg.text_dim,\n",
+        "            hidden_dim=cfg.text_dim,\n",
+        "            num_layers=cfg.num_layers_text,\n",
+        "            dropout=cfg.dropout,\n",
+        "        )\n",
         "        self.null_text = nn.Parameter(torch.zeros(cfg.text_dim))\n",
         "\n",
         "        self.time_mlp = nn.Sequential(\n",
@@ -186,10 +192,17 @@
         "\n",
         "    def forward(self, x, t, txt_tokens, txt_lens, drop_text_prob: float = 0.1):\n",
         "        t_emb = self.time_mlp(sinusoidal_time_embedding(t, self.time_mlp[0].in_features))\n",
-        "        txt_emb = self.text_encoder(txt_tokens, txt_lens)\n",
-        "        if self.training and drop_text_prob > 0:\n",
-        "            mask = (torch.rand(txt_emb.size(0), device=txt_emb.device) < drop_text_prob).float()[:, None]\n",
-        "            txt_emb = txt_emb * (1 - mask) + self.null_text[None, :] * mask\n",
+        "\n",
+        "        # --- classifier-free guidance support ---\n",
+        "        # During sampling we need a true unconditional path even in eval(),\n",
+        "        # so drop_text_prob==1.0 forces the null embedding.\n",
+        "        if drop_text_prob >= 1.0:\n",
+        "            txt_emb = self.null_text[None, :].expand(x.size(0), -1)\n",
+        "        else:\n",
+        "            txt_emb = self.text_encoder(txt_tokens, txt_lens)\n",
+        "            if self.training and drop_text_prob > 0.0:\n",
+        "                mask = (torch.rand(txt_emb.size(0), device=txt_emb.device) < drop_text_prob).float()[:, None]\n",
+        "                txt_emb = txt_emb * (1 - mask) + self.null_text[None, :] * mask\n",
         "\n",
         "        e1 = self.enc1(x, t_emb, txt_emb)\n",
         "        e2 = self.enc2(self.pool(e1), t_emb, txt_emb)\n",
@@ -273,17 +286,20 @@
         "        return sqrt_ac * x0 + sqrt_one_minus_ac * noise\n",
         "\n",
         "    @torch.no_grad()\n",
-        "    def p_sample(self, model, x, t: int, txt_tokens, txt_lens, guidance_scale: float = 2.0):\n",
+        "    def _predict_eps_cfg(self, model, x, t: int, txt_tokens, txt_lens, guidance_scale: float):\n",
         "        # classifier-free guidance\n",
         "        t_batch = torch.full((x.size(0),), t, device=x.device, dtype=torch.long)\n",
         "        eps_text = model(x, t_batch, txt_tokens, txt_lens, drop_text_prob=0.0)\n",
         "        eps_null = model(x, t_batch, txt_tokens, txt_lens, drop_text_prob=1.0)\n",
-        "        eps = eps_null + guidance_scale * (eps_text - eps_null)\n",
+        "        return eps_null + guidance_scale * (eps_text - eps_null)\n",
         "\n",
+        "    @torch.no_grad()\n",
+        "    def p_sample(self, model, x, t: int, txt_tokens, txt_lens, guidance_scale: float = 2.0):\n",
+        "        \"\"\"Ancestral DDPM step (kept for reference).\"\"\"\n",
+        "        eps = self._predict_eps_cfg(model, x, t, txt_tokens, txt_lens, guidance_scale)\n",
         "        beta_t = self.betas[t]\n",
         "        alpha_t = self.alphas[t]\n",
         "        alpha_cum_t = self.alphas_cum[t]\n",
-        "\n",
         "        mean = (1 / alpha_t.sqrt()) * (x - beta_t / (1 - alpha_cum_t).sqrt() * eps)\n",
         "        if t == 0:\n",
         "            return mean\n",
@@ -291,13 +307,44 @@
         "        return mean + beta_t.sqrt() * noise\n",
         "\n",
         "    @torch.no_grad()\n",
-        "    def sample(self, model, txt_tokens, txt_lens, steps: int = 40, guidance_scale: float = 2.0):\n",
+        "    def ddim_step(self, model, x, t: int, t_prev: int, txt_tokens, txt_lens, guidance_scale: float = 2.0, eta: float = 0.0):\n",
+        "        \"\"\"DDIM step that supports skipping timesteps cleanly.\"\"\"\n",
+        "        eps = self._predict_eps_cfg(model, x, t, txt_tokens, txt_lens, guidance_scale)\n",
+        "\n",
+        "        ac_t = self.alphas_cum[t]\n",
+        "        ac_prev = self.alphas_cum[t_prev] if t_prev >= 0 else torch.tensor(1.0, device=x.device)\n",
+        "\n",
+        "        # predict x0\n",
+        "        x0 = (x - (1 - ac_t).sqrt() * eps) / ac_t.sqrt()\n",
+        "        x0 = x0.clamp(-1, 1)\n",
+        "\n",
+        "        # DDIM variance control\n",
+        "        if t_prev < 0:\n",
+        "            return x0\n",
+        "\n",
+        "        sigma = eta * torch.sqrt((1 - ac_prev) / (1 - ac_t) * (1 - ac_t / ac_prev))\n",
+        "        noise = torch.randn_like(x) if eta > 0 else torch.zeros_like(x)\n",
+        "\n",
+        "        dir_xt = (1 - ac_prev - sigma**2).sqrt() * eps\n",
+        "        x_prev = ac_prev.sqrt() * x0 + dir_xt + sigma * noise\n",
+        "        return x_prev\n",
+        "\n",
+        "    @torch.no_grad()\n",
+        "    def sample(self, model, txt_tokens, txt_lens, steps: int = 40, guidance_scale: float = 2.0, eta: float = 0.0):\n",
         "        model.eval()\n",
-        "        x = torch.randn(txt_tokens.size(0), 1, self.cfg.img_size, self.cfg.img_size, device=txt_tokens.device)\n",
-        "        # map steps to actual diffusion steps (stride)\n",
-        "        stride = max(1, self.cfg.timesteps // steps)\n",
-        "        for t in range(self.cfg.timesteps - 1, -1, -stride):\n",
-        "            x = self.p_sample(model, x, t, txt_tokens, txt_lens, guidance_scale)\n",
+        "        b = txt_tokens.size(0)\n",
+        "        x = torch.randn(b, 1, self.cfg.img_size, self.cfg.img_size, device=txt_tokens.device)\n",
+        "\n",
+        "        # choose a schedule of timesteps (descending)\n",
+        "        steps = int(steps)\n",
+        "        steps = max(2, min(steps, self.cfg.timesteps))\n",
+        "        ts = torch.linspace(self.cfg.timesteps - 1, 0, steps, device=txt_tokens.device).long()\n",
+        "\n",
+        "        for i in range(len(ts)):\n",
+        "            t = int(ts[i].item())\n",
+        "            t_prev = int(ts[i + 1].item()) if i + 1 < len(ts) else -1\n",
+        "            x = self.ddim_step(model, x, t, t_prev, txt_tokens, txt_lens, guidance_scale=guidance_scale, eta=eta)\n",
+        "\n",
         "        return x\n",
         "\n",
         "\n",
@@ -327,7 +374,17 @@
         "model = UNet(cfg, text_vocab=tokenizer.vocab_size).to(device)\n",
         "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
         "\n",
-        "num_steps = 800  # keep small for a demo; increase for quality\n",
+        "# EMA helps samples look cleaner with the same number of training steps\n",
+        "@torch.no_grad()\n",
+        "def ema_update(ema_model: nn.Module, model: nn.Module, decay: float = 0.999):\n",
+        "    for ema_p, p in zip(ema_model.parameters(), model.parameters()):\n",
+        "        ema_p.data.mul_(decay).add_(p.data, alpha=1 - decay)\n",
+        "\n",
+        "ema_model = UNet(cfg, text_vocab=tokenizer.vocab_size).to(device)\n",
+        "ema_model.load_state_dict(model.state_dict())\n",
+        "ema_decay = 0.999\n",
+        "\n",
+        "num_steps = 800  # demo; for digits, try 10_000+ (MNIST is easy)\n",
         "log_interval = 100\n",
         "\n",
         "model.train()\n",
@@ -350,6 +407,7 @@
         "        loss.backward()\n",
         "        nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
         "        optimizer.step()\n",
+        "        ema_update(ema_model, model, decay=ema_decay)\n",
         "\n",
         "        step += 1\n",
         "        pbar.update(1)\n",
@@ -369,7 +427,8 @@
       "outputs": [],
       "source": [
         "# Sampling demo\n",
-        "model.eval()\n",
+        "# Use EMA weights for nicer samples\n",
+        "ema_model.eval()\n",
         "prompts = [\"zero digit\", \"three digit\", \"five digit\", \"seven digit\", \"nine digit\"]\n",
         "\n",
         "tokens = []\n",
@@ -382,7 +441,8 @@
         "lens = torch.stack(lens).to(device)\n",
         "\n",
         "with torch.no_grad():\n",
-        "    samples = diffusion.sample(model, tokens, lens, steps=40, guidance_scale=2.0)\n",
+        "    # try steps=30..60, guidance_scale=1.5..3.0\n",
+        "    samples = diffusion.sample(ema_model, tokens, lens, steps=40, guidance_scale=2.0, eta=0.0)\n",
         "\n",
         "imgs = (samples.clamp(-1, 1) * 0.5 + 0.5).cpu()  # back to [0,1]\n",
         "fig, axes = plt.subplots(1, len(prompts), figsize=(len(prompts)*2, 2))\n",
