feat: scale model, add  fashion mnist

--- a/text_to_mnist_diffusion.ipynb
+++ b/text_to_mnist_diffusion.ipynb
@@ -63,25 +63,66 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Data: MNIST + simple text prompts\n",
-        "def prompt_for_label(label: int) -> str:\n",
-        "    names = [\n",
-        "        \"zero digit\", \"one digit\", \"two digit\", \"three digit\", \"four digit\",\n",
-        "        \"five digit\", \"six digit\", \"seven digit\", \"eight digit\", \"nine digit\",\n",
-        "    ]\n",
-        "    return names[label]\n",
+        "# Data: MNIST + FashionMNIST with text prompts\n",
+        "# We train on (image, prompt) pairs so the model learns real text conditioning.\n",
+        "\n",
+        "MNIST_NAMES = [\n",
+        "    \"zero\", \"one\", \"two\", \"three\", \"four\",\n",
+        "    \"five\", \"six\", \"seven\", \"eight\", \"nine\",\n",
+        "]\n",
+        "FASHION_NAMES = [\n",
+        "    \"t-shirt/top\", \"trouser\", \"pullover\", \"dress\", \"coat\",\n",
+        "    \"sandal\", \"shirt\", \"sneaker\", \"bag\", \"ankle boot\",\n",
+        "]\n",
+        "\n",
+        "MNIST_TEMPLATES = [\n",
+        "    \"digit {name}\",\n",
+        "    \"handwritten digit {name}\",\n",
+        "]\n",
+        "FASHION_TEMPLATES = [\n",
+        "    \"fashion {name}\",\n",
+        "    \"clothing {name}\",\n",
+        "]\n",
+        "\n",
+        "def prompt_mnist(y: int) -> str:\n",
+        "    name = MNIST_NAMES[int(y)]\n",
+        "    return random.choice(MNIST_TEMPLATES).format(name=name)\n",
+        "\n",
+        "def prompt_fashion(y: int) -> str:\n",
+        "    name = FASHION_NAMES[int(y)]\n",
+        "    return random.choice(FASHION_TEMPLATES).format(name=name)\n",
         "\n",
         "transform = transforms.Compose([\n",
-        "    transforms.ToTensor(),              # [0,1]\n",
-        "    transforms.Normalize((0.5,), (0.5,)) # [-1,1] for diffusion target\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.5,), (0.5,)),  # [-1,1]\n",
         "])\n",
         "\n",
-        "train_ds = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
-        "test_ds = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
+        "class PromptedDataset(torch.utils.data.Dataset):\n",
+        "    def __init__(self, base_ds, prompt_fn):\n",
+        "        self.base_ds = base_ds\n",
+        "        self.prompt_fn = prompt_fn\n",
+        "    def __len__(self):\n",
+        "        return len(self.base_ds)\n",
+        "    def __getitem__(self, idx):\n",
+        "        x, y = self.base_ds[idx]\n",
+        "        return x, self.prompt_fn(y)\n",
         "\n",
-        "batch_size = 128\n",
-        "train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=True)\n",
-        "print('Train batches:', len(train_loader))\n",
+        "mnist_train = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
+        "fashion_train = datasets.FashionMNIST(root='./data', train=True, download=True, transform=transform)\n",
+        "\n",
+        "use_dataset = 'both'  # 'mnist' | 'fashion' | 'both'\n",
+        "if use_dataset == 'mnist':\n",
+        "    train_ds = PromptedDataset(mnist_train, prompt_mnist)\n",
+        "elif use_dataset == 'fashion':\n",
+        "    train_ds = PromptedDataset(fashion_train, prompt_fashion)\n",
+        "else:\n",
+        "    train_ds = torch.utils.data.ConcatDataset([\n",
+        "        PromptedDataset(mnist_train, prompt_mnist),\n",
+        "        PromptedDataset(fashion_train, prompt_fashion),\n",
+        "    ])\n",
+        "\n",
+        "batch_size = 256 if torch.cuda.is_available() else 128\n",
+        "print('Dataset size:', len(train_ds), 'batch_size:', batch_size)\n",
         "\n"
       ]
     },
@@ -226,7 +267,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Tokenizer helpers (simple character-level for the few prompts we have)\n",
+        "# Tokenizer helpers (simple character-level; robust for small prompt vocab)\n",
         "\n",
         "class SimpleCharTokenizer:\n",
         "    def __init__(self, texts, pad_token='<pad>', unk_token='<unk>'):\n",
@@ -235,10 +276,12 @@
         "        self.unk_token = unk_token\n",
         "        self.itos = [pad_token, unk_token] + chars\n",
         "        self.stoi = {c: i for i, c in enumerate(self.itos)}\n",
+        "\n",
         "    @property\n",
         "    def vocab_size(self):\n",
         "        return len(self.itos)\n",
-        "    def encode(self, text: str, max_len: int = 24):\n",
+        "\n",
+        "    def encode(self, text: str, max_len: int = 32):\n",
         "        text = text.lower()\n",
         "        ids = [self.stoi.get(c, self.stoi[self.unk_token]) for c in text[:max_len]]\n",
         "        length = len(ids)\n",
@@ -246,7 +289,18 @@
         "            ids += [self.stoi[self.pad_token]] * (max_len - length)\n",
         "        return torch.tensor(ids, dtype=torch.long), torch.tensor(length, dtype=torch.long)\n",
         "\n",
-        "all_prompts = [prompt_for_label(i) for i in range(10)]\n",
+        "    def encode_batch(self, texts, max_len: int = 32):\n",
+        "        toks, lens = zip(*[self.encode(t, max_len=max_len) for t in texts])\n",
+        "        return torch.stack(toks), torch.stack(lens)\n",
+        "\n",
+        "# Build tokenizer vocab from both datasets' templates\n",
+        "all_prompts = []\n",
+        "for i in range(10):\n",
+        "    for tpl in MNIST_TEMPLATES:\n",
+        "        all_prompts.append(tpl.format(name=MNIST_NAMES[i]))\n",
+        "    for tpl in FASHION_TEMPLATES:\n",
+        "        all_prompts.append(tpl.format(name=FASHION_NAMES[i]))\n",
+        "\n",
         "tokenizer = SimpleCharTokenizer(all_prompts)\n",
         "print('Vocab size:', tokenizer.vocab_size)\n",
         "\n"
@@ -348,16 +402,22 @@
         "        return x\n",
         "\n",
         "\n",
-        "def prepare_text_batch(labels):\n",
-        "    tokens = []\n",
-        "    lengths = []\n",
-        "    for y in labels:\n",
-        "        tok, l = tokenizer.encode(prompt_for_label(int(y)))\n",
-        "        tokens.append(tok)\n",
-        "        lengths.append(l)\n",
-        "    tokens = torch.stack(tokens).to(device)\n",
-        "    lengths = torch.stack(lengths).to(device)\n",
-        "    return tokens, lengths\n",
+        "def collate_batch(batch):\n",
+        "    imgs, prompts = zip(*batch)\n",
+        "    imgs = torch.stack(imgs)\n",
+        "    toks, lens = tokenizer.encode_batch(prompts, max_len=32)\n",
+        "    return imgs, toks, lens, list(prompts)\n",
+        "\n",
+        "# DataLoader (now that tokenizer + collate exist)\n",
+        "train_loader = DataLoader(\n",
+        "    train_ds,\n",
+        "    batch_size=batch_size,\n",
+        "    shuffle=True,\n",
+        "    num_workers=2,\n",
+        "    pin_memory=True,\n",
+        "    collate_fn=collate_batch,\n",
+        ")\n",
+        "print('Train batches:', len(train_loader))\n",
         "\n"
       ]
     },
@@ -370,43 +430,64 @@
         "# Model + training loop\n",
         "\n",
         "cfg = DiffusionConfig()\n",
-        "diffusion = SimpleDiffusion(cfg).to(device)  # <-- move diffusion schedule tensors to GPU\n",
-        "model = UNet(cfg, text_vocab=tokenizer.vocab_size).to(device)\n",
-        "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
+        "diffusion = SimpleDiffusion(cfg).to(device)\n",
+        "\n",
+        "base_model = UNet(cfg, text_vocab=tokenizer.vocab_size).to(device)\n",
+        "\n",
+        "# Use both T4s on Kaggle if available\n",
+        "if torch.cuda.device_count() > 1:\n",
+        "    print('Using DataParallel on', torch.cuda.device_count(), 'GPUs')\n",
+        "    model = nn.DataParallel(base_model)\n",
+        "else:\n",
+        "    model = base_model\n",
+        "\n",
+        "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-4, weight_decay=1e-2)\n",
         "\n",
         "# EMA helps samples look cleaner with the same number of training steps\n",
         "@torch.no_grad()\n",
+        "def unwrap(m: nn.Module) -> nn.Module:\n",
+        "    return m.module if hasattr(m, 'module') else m\n",
+        "\n",
+        "@torch.no_grad()\n",
         "def ema_update(ema_model: nn.Module, model: nn.Module, decay: float = 0.999):\n",
-        "    for ema_p, p in zip(ema_model.parameters(), model.parameters()):\n",
+        "    src = unwrap(model)\n",
+        "    for ema_p, p in zip(ema_model.parameters(), src.parameters()):\n",
         "        ema_p.data.mul_(decay).add_(p.data, alpha=1 - decay)\n",
         "\n",
         "ema_model = UNet(cfg, text_vocab=tokenizer.vocab_size).to(device)\n",
-        "ema_model.load_state_dict(model.state_dict())\n",
+        "ema_model.load_state_dict(unwrap(model).state_dict())\n",
         "ema_decay = 0.999\n",
         "\n",
-        "num_steps = 800  # demo; for digits, try 10_000+ (MNIST is easy)\n",
-        "log_interval = 100\n",
+        "# Mixed precision for speed on T4\n",
+        "scaler = torch.cuda.amp.GradScaler(enabled=torch.cuda.is_available())\n",
+        "\n",
+        "num_steps = 30_000  # \"complete\" baseline for MNIST/FashionMNIST\n",
+        "log_interval = 200\n",
         "\n",
         "model.train()\n",
         "step = 0\n",
         "pbar = tqdm(total=num_steps, desc='train')\n",
         "while step < num_steps:\n",
-        "    for x, y in train_loader:\n",
-        "        x = x.to(device)\n",
-        "        y = y.to(device)\n",
-        "        tokens, lens = prepare_text_batch(y)\n",
+        "    for x, tokens, lens, _prompts in train_loader:\n",
+        "        x = x.to(device, non_blocking=True)\n",
+        "        tokens = tokens.to(device, non_blocking=True)\n",
+        "        lens = lens.to(device, non_blocking=True)\n",
         "\n",
         "        t = diffusion.sample_timesteps(x.size(0), device)\n",
         "        noise = torch.randn_like(x)\n",
         "        x_noisy = diffusion.add_noise(x, t, noise)\n",
         "\n",
-        "        pred = model(x_noisy, t, tokens, lens, drop_text_prob=0.1)\n",
-        "        loss = F.mse_loss(pred, noise)\n",
+        "        optimizer.zero_grad(set_to_none=True)\n",
+        "        with torch.cuda.amp.autocast(enabled=torch.cuda.is_available()):\n",
+        "            pred = model(x_noisy, t, tokens, lens, drop_text_prob=0.15)\n",
+        "            loss = F.mse_loss(pred, noise)\n",
         "\n",
-        "        optimizer.zero_grad()\n",
-        "        loss.backward()\n",
+        "        scaler.scale(loss).backward()\n",
+        "        scaler.unscale_(optimizer)\n",
         "        nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
-        "        optimizer.step()\n",
+        "        scaler.step(optimizer)\n",
+        "        scaler.update()\n",
+        "\n",
         "        ema_update(ema_model, model, decay=ema_decay)\n",
         "\n",
         "        step += 1\n",
@@ -429,7 +510,15 @@
         "# Sampling demo\n",
         "# Use EMA weights for nicer samples\n",
         "ema_model.eval()\n",
-        "prompts = [\"zero digit\", \"three digit\", \"five digit\", \"seven digit\", \"nine digit\"]\n",
+        "\n",
+        "# Demo prompts (digits + fashion)\n",
+        "prompts = [\n",
+        "    \"digit zero\",\n",
+        "    \"digit three\",\n",
+        "    \"digit seven\",\n",
+        "    \"fashion sneaker\",\n",
+        "    \"fashion ankle boot\",\n",
+        "]\n",
         "\n",
         "tokens = []\n",
         "lens = []\n",
